# RSEngine

./: .gitignore  LICENSE  RSEngine.sln  build_all.bat  engine_env.bat
RSEngine/: RSEngine.cpp  RSEngine.vcxproj  RSEngine.vcxproj.filters
RSEngine/Classes/: BasePart.cpp  Camera.cpp  EngineClass.cpp  Folder.cpp  Instance.cpp  MeshPart.cpp  Part.cpp  Skybox.cpp  Texture.cpp
RSEngine/Core/: Clipboard.cpp  Config.cpp  Console.cpp  Engine.cpp  Filesystem.cpp  GameLib.cpp
RSEngine/Editor/: EdAssetExplorer.cpp  EdClassHelper.cpp  EdConfiguration-Orbital.cpp  EdConsole.cpp  EdInstanceProperties.cpp  EdInstanceView.cpp  EdViewport.cpp  Editor.cpp  EditorComponent.cpp
RSEngine/Include/: RSEngine.h  RSEngine_BuildMacros.h
RSEngine/Include/Classes/: BasePart.h  Camera.h  EngineClass.h  Instance.h  LevelRoot.h  MeshPart.h  Part.h  RSClasses.h  SceneLighting.h  Skybox.h  Texture.h
RSEngine/Include/Core/: Config.h  Engine.h  Filesystem.h  GameLib.h  RSErrorHandling.h
RSEngine/Include/Editor/: EdAssetExplorer.h  EdClassHelper.h  EdConfiguration-Orbital.h  EdConsole.h  EdInstanceProperties.h  EdViewport.h  Editor.h  EditorStyle.h
RSEngine/Include/Input/: Gamepad.h  RareInput.h
RSEngine/Include/Level/: Level.h
RSEngine/Include/Parser/: RareParser.h
RSEngine/Include/Physics/: RSPhysics.h
RSEngine/Include/Render/: LoadModel_FBX.h  LoadModel_OBJ.h  RSGeometryGenerator.h  RSRender.h  RSRender_Buffer.h  RSRender_Shader.h  RSRender_Texture.h  RSRender_Types.h
RSEngine/Include/Renderer/: RSGeometryGenerator.h  RSRender.h  RSRender_Buffer.h  RSRender_Enums.h  RSRender_Pipeline.h  RSRender_Shader.h  RSRender_Structs.h
RSEngine/Include/Types/: CoordData.h  MeshData.h  RSRenderTypes.h  RareTypes.h  Vector2.h  Vector3.h
RSEngine/Include/UI/: RSEngine_UI.h
RSEngine/Include/Utils/: RSEngine_RenderPipeline.h  RSUtils.h
RSEngine/Include/Window/: WindowSystem.h
RSEngine/Input/: RareInput.cpp
RSEngine/Input/libScePad/: RSScePad.cpp
RSEngine/Level/: Level.cpp
RSEngine/Parser/: RareParser.cpp
RSEngine/Parser/tinyxml/: tinyxml2.cpp
RSEngine/Physics/: RSPhysics.cpp
RSEngine/Render/: LoadModel_FBX.cpp  LoadModel_OBJ.cpp  RSCreateTexture.cpp  RSGeometryGenerator.cpp  RSLoadShader.cpp  RSRender.cpp  RSRenderGui.cpp  RSRenderInstance.cpp  RSRender_Buffer.cpp  RSRender_EditorView.cpp  RSRender_Shader.cpp  RSRender_Texture.cpp
RSEngine/Render/D3D11/: RSD3D11.cpp  RSD3D11_Buffer.cpp  RSD3D11_Shader.cpp  RSD3D11_Texture.cpp  RSD3D11_TypeConv.cpp
RSEngine/Render/ImGui/: imgui.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_widgets.cpp
RSEngine/Renderer/: LoadModel_OBJ.cpp  RSGeometryGenerator.cpp  RSRenderBuffer.cpp  RSRender_Camera.cpp  RSRender_Class.cpp  RSRender_Shader.cpp  RSRender_Target.cpp
RSEngine/Script/: RSScriptingEngine.cpp
RSEngine/Types/: CoordFrame.cpp  Vector2.cpp  Vector3.cpp
RSEngine/UI/: RSEngine_UI.cpp
RSEngine/Utils/: RSEngine_GeometryGenerator.cpp  RSEngine_RenderPipeline.cpp
RSEngine/Window/: WindowSystem.cpp
place/: RSEngine.xml  editor.pak
place/data/shaders/: rshader_commonobj.shader  rshader_guiobj.shader  shader_common_deferred_ps.hlsl  shader_common_ps.hlsl  shader_common_vs.hlsl  shader_skybox_ps.hlsl  shader_skybox_vs.hlsl  shader_ui_ps.hlsl  shader_ui_vs.hlsl
place/user/: Engine.ini
scripts/: build_engine.bat  build_sdk.bat  build_shaders.bat  postbuild-engine.cmd
sdk/private/: RSEngine_BuildMacros.h  RSEngine_VersionInfo.h
sdk/private/Classes/: BasePart.h  Camera.h  EngineClass.h  Folder.h  Instance.h  MeshPart.h  Part.h  Skybox.h  Texture.h
sdk/private/Core/: Clipboard.h  Config.h  Console.h  Engine.h  Error.h  GameLib.h
sdk/private/Editor/: EdInstanceView.h  EdUtilities.h  EditorStyle.h
sdk/private/Input/: RareInput.h
sdk/private/Render/: RSRender.h  RSRender_Math.h  RSRender_Shader.h  RSRender_Types.h
sdk/private/Types/: MeshData.h  Vector2.h  Vector3.h
sdk/private/Utils/: RSEngine_GeometryGenerator.h  RSEngine_RenderPipeline.h  RSEngine_RichPresence.h
sdk/private/Window/: WindowSystem.h
sdk/temp/: RSEngine.h
sdk/temp/Classes/: Camera.h  EngineClass.h  Folder.h  Part.h  RSClasses.h  Texture.h
sdk/temp/Core/: Config.h  Engine.h
sdk/temp/Parser/: RareParser.h
sdk/temp/Render/: RSRender.h  RSRender_EditorView.h
sdk/temp/Types/: MeshData.h  Vector2.h  Vector3.h
sdk/temp/Utils/: RSEngine_GeometryGenerator.h
shaders/: part_vs.hlsl  shaders.vcxproj  shaders.vcxproj.filters  skybox_vs.hlsl
src/: CMakeLists.txt  RSEngine-VS2017.sln  editor.sln  engine.sln  shaders.sln  tools.sln
src/Core/Launcher/: Launcher.vcxproj  Launcher.vcxproj.filters  main.cpp
src/Core/RSEngine/: RSEngine.cpp  RSEngine.vcxproj
src/Core/Renderer/: RSRender.cpp  RSRender_Shader.cpp  Renderer.vcxproj  Renderer.vcxproj.filters
src/Core/shaders/: shaders.vcxproj
src/Engine/: Engine.vcxproj  Engine.vcxproj.filters  RSEngine.cpp
src/Engine/AuroraRender/: ARCameraHelper.cpp
src/Engine/Core/: Console.cpp  Engine.cpp  ErrorHandling.cpp  GameLib.cpp  LevelManager.cpp  Timer.cpp
src/Engine/Editor/: EdAssetExplorer.cpp  EdClassHelper.cpp  (+7 more)
src/FirstPersonProject/: FirstPersonProject.vcxproj
src/Launcher/: Launcher.rc  Launcher.vcxproj  main.cpp
src/RSEngine/: CMakeLists.txt  RSEngine.cpp  RSEngine.vcxproj  RSEngine.vcxproj.filters
src/RSEngine/Classes/: Camera.cpp  EngineClass.cpp  Instance.cpp  MeshPart.cpp  Skybox.cpp  Texture.cpp
src/RSEngine/Core/: Clipboard.cpp  Config.cpp  Engine.cpp
src/RSEngine/Input/libScePad/: RSScePad.cpp
src/RSEngine/Parser/: RareParser.cpp
src/RSEngine/Render/: RSRender.cpp  RSRender_Buffer.cpp
src/RSEngine/Render/D3D11/: RSD3D11.cpp  RSD3D11_Buffer.cpp  RSD3D11_Shader.cpp
src/RSEngine/Types/: Vector2.cpp
src/RSEngine/Utils/: RSEngine_GeometryGenerator.cpp  RSEngine_RenderPipeline.cpp
src/RSEngine/Window/: WindowSystem.cpp
src/Renderer/: RSRender_EditorView.cpp  RSRender_Texture.cpp  Renderer.vcxproj
src/editor/: EdAssetExplorer.cpp  Editor.cpp  EditorComponent.cpp  editor.vcxproj
src/shaders/: shaders.vcxproj  shaders.vcxproj.filters
(+173 files in other folders)
